we tried real hard

--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,19 @@ body{
 }
 
 .container{
-    /*width:80%;*/
-    margin:auto;
+    display:flex;
+    align-items:flex-start;
+    flex-wrap:wrap;
 }
 
 #main-header{
     background-color:bisque;
     width:100%;
     position:center;
+}
+
+#main-footer{
+    text-align: center;
 }
 
 #main-header h1{
@@ -46,6 +51,7 @@ body{
 .section img{
     border-radius:10px;
     border-image-slice:300px 100px;
+    align-self:center;
 }
 
 .section h3{
@@ -53,17 +59,15 @@ body{
 }
 
 .about-me{
-    /*float:center;*/
-    width:30%;
+    flex:2;
     align-self:center;
 }
 
 .dog-photos{
-    float:right;
-    width:30%;
+    flex:1;
+    align-content:center;
 }
 
 .diving_photos{
-    float:left;
-    width:30%;
+    flex:1;
 }
